# duckyPad-Configurator

./: .gitignore  README.md  pyproject.toml
resources/: .~lock.dpp convert.odt#  _pull_dsvm.py  _scrap.py  dpp convert.odt  dumpsd_standalone.py  notes.md
src/: _build_mac_pyinstaller.py  _build_windows.py  _builtin_funcs.txt  _pull_dsvm.py  _scrap.py  check_update.py  dp20_dumpsd.py  dpds_stdlib_1767893844.txt  dpp_config.py  ds3_preprocessor.py  ds_stdlib.py  dsvm_common.py  dsvm_ds2py.py  dsvm_make_bytecode.py  dsvm_myast.py  dsvm_optimizer.py  dsvm_preprocessor.py  duck_objs.py  duckypad_config.py  dumpsd_standalone.py  hid_common.py  hid_op.py  make_bytecode.py  my_compare.py  out.txt  requirements.txt  shared.py  test.txt
src/ds_compiler/: ds2py.py  make_bytecode.py
src/new_files/profile_Discord/: key18.txt
src/sample_profiles/: profile_info.txt
src/sample_profiles - Copy/: profile_info.txt
src/sample_profiles - Copy/profile_Welcome/: config.txt
src/sd_files/: profile_info.txt
src/sd_files/profile_haha/: config.txt
src/sd_files/profile_test/: config.txt  key19.txt  key20.txt
src/test/: dpds_stdlib_1767962308.txt  dpds_stdlib_1767972735.txt
src/to_write_back/: dp_settings.txt  profile_info.txt
src/to_write_back/profile1_browser/: config.txt  key6.txt
src/to_write_back/profile2_eagle SCH/: config.txt  key11.txt  key12.txt  key15.txt  key5.txt  key6.txt  key7.txt  key8.txt
src/to_write_back/profile3_eagle BRD/: key12.txt  key13.txt  key14.txt  key3.txt  key4.txt  key5.txt  key6.txt
src/to_write_back/profile4_eagle LIB/: key14.txt  key4.txt  (+1 more)
(+28 files in other folders)
